# opengl-playground

./: .gitignore  .luarc.json  .ninja_deps  .ninja_log  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  build.ninja  readme.md  scripts.d.lua
docs/: version_0_1.md
docs/images/: notes.md
libs/: readme.md
src/: Entry.cpp  Entry.h  Exception.h  Include.h  TypedClass.h  Window.cpp  Window.h  main.cpp
src/Applications/Editor/: EditorApplication.cpp  EditorApplication.h
src/Applications/Main/: MainApplication.cpp  MainApplication.h
src/ApplicationsV2/Main/: MainApplication.cpp  MainApplication.h
src/Components/: ModelComponent.cpp  ModelComponent.h  RenderableComponent.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h
src/Core/: API.h
src/Core/Application/: Application.cpp  Application.h
src/Core/Behaviour/: EntityBehaviour.cpp  EntityBehaviour.h
src/Core/Entity/: Component.h  Entity.cpp  Entity.h  EntityConfiguration.cpp  EntityConfiguration.h  EntityContext.cpp  EntityContext.h  EntitySerializer.h
src/Core/Events/: EntityCreationEvent.h  Event.cpp  Event.h  EventManager.h  EventManager_V2.h  InputEvent.h  RawSDLEvent.h  SystemEvent.h  WindowEvent.h
src/Core/Helper/: AtlasGraph.h  ComponentTransformEdit.h  DoubleBuffer.h  File.h  GLDebugMessageCallback.h  Log.h  Math.h  Profilable.cpp  Profilable.h  Profiling.cpp  Profiling.h  QuadTree.h  QuadTreeOccupancy.h  ShaderSourceLoader.h  StringUtils.cpp  StringUtils.h  Time.h  Types.h
src/Core/Json/: Json.cpp  Json.h  JsonTypes.cpp
src/Core/Module/: EntityModule.cpp  EntityModule.h
src/Core/Reflection/: Factory.h  Identity.h  TypedClass.h
src/Core/Resources/: Resource.h  ResourceFactory.h  ResourceHandle.h  ResourceManager.h  ResourceProcess.cpp  ResourceProcess.h
src/Core/Scripting/: ScriptingEventCallback.h  ScriptingManager.cpp  ScriptingManager.h
src/Core/System/: AbstractComponentRegistry.h  BaseSystemProcess.cpp  BaseSystemProcess.h  ComponentsTuple.cpp  ComponentsTuple.h  ContinuousSystemProcess.cpp  ContinuousSystemProcess.h  EntityRelatedComponentRegistry.h  EntitySystem.cpp  EntitySystem.h  EntitySystemRegistry.cpp  EntitySystemRegistry.h  EntityUniqueComponentRegistry.h  RelatedComponentRegistry.h  SameComponentRegistry.h  SingleComponentRegistry.h
src/CoreV2/: API.h
src/CoreV2/Application/: Application.cpp  Application.h
src/CoreV2/Entity/: Component.h  Entity.cpp  Entity.h  EntityConfiguration.cpp  EntityConfiguration.h  EntityContext.cpp  EntityContext.h  EntitySerializer.h
src/CoreV2/Events/: EntityCreationEvent.h  Event.h  EventManager.h  RawSDLEvent.h  WindowEvent.h
src/CoreV2/Json/: Json.cpp  Json.h
src/CoreV2/Module/: EntityModule.cpp  EntityModule.h
src/CoreV2/Reflection/: Factory.h  Identity.h  Type.h  TypedClass.h
src/CoreV2/Resources/: Resource.cpp  Resource.h  ResourceHandle.cpp  ResourceHandle.h  ResourceManager.h
src/CoreV2/System/: EntitySystem.h
src/Events/: Event.h  EventManager.h  InputEvent.h  WindowEvent.h
src/Helper/: AtlasGraph.h  Console.h  GLDebugMessageCallback.h  Logging.h  QuadTree.cpp  QuadTree.h  QuadTreeOccupancy.cpp  QuadTreeOccupancy.h  RecursiveTextFileLoader.h  ShaderSourceLoader.cpp  ShaderSourceLoader.h  StringUtils.h  Types.h
src/Modules/Application/: ApplicationModule.h
src/Modules/Behaviour/: BehaviourModule.h
src/Modules/Behaviours/: BehavioursModule.h
src/Modules/Common/: CommonModule.h
src/Modules/Editor/: EditorUIModule.h
src/Modules/EditorUI/: EditorUIModule.h
src/Modules/Physics/: PhysicsModule.cpp  PhysicsModule.h
src/Modules/Renderer/: RendererModule.h
src/Modules/WorldMechanics/: WorldMechanicsModule.h
src/ModulesV2/Common/: CommonModule.h
src/ModulesV2/EditorUI/: EditorUIModule.h
src/ModulesV2/Renderer/: RendererModule.h
src/Physics/: TestPhysics.cpp  TestPhysics.h
src/PostProcessRenderer/: PostProcessRenderer.cpp  PostProcessRenderer.h
src/Renderer/: BaseRenderer.cpp  Camera.cpp  Camera.h  Light.cpp  Light.h  LightsUniformBuffer.cpp  LightsUniformBuffer.h  Model.cpp  Model.h  Plane.cpp  Plane.h  RenderManager.cpp  RenderManager.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShadowAtlas.h  ShadowMapRenderer.cpp  ShadowMapRenderer.h  StaticGeometryRenderer.cpp  StaticGeometryRenderer.h  Texture.cpp  Texture.h  Texture2D.h  TextureAtlas.cpp  TextureAtlas.h  TextureAtlasManager.cpp  TextureAtlasManager.h  TextureCube.cpp  TextureLoader.cpp  TextureLoader.h  TextureRenderTarget.cpp  TextureRenderTarget.h  UniformBuffer.cpp  UniformBuffer.h  (+2 more)
src/Renderer/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
src/Renderer/Common/: ProjectionView.h
src/Renderer/EnvironmentProbe/: EnvironmentProbe.cpp  EnvironmentProbe.h  EnvironmentProbeUniformBuffer.cpp  EnvironmentProbeUniformBuffer.h
src/Renderer/Light/: Light.cpp  Light.h  LightsUniformBuffer.cpp  LightsUniformBuffer.h
src/Renderer/Material/: MaterialConfiguration.h  MaterialConfigurationGLTFLoader.cpp  MaterialConfigurationGLTFLoader.h  MaterialConfigurationSerializer.cpp  MaterialConfigurationSerializer.h
src/Renderer/Model/: Cube.cpp  GLTFFileLoader.cpp  GLTFFileLoader.h  Model.cpp  Model.h  ModelConfigurationLoader.cpp  ModelGLTFLoader.cpp  (+12 more)
src/ResourcesV2/: MaterialResource.cpp  MaterialResource.h  ShaderProgramResource.cpp  ShaderProgramResource.h  ShaderResource.cpp  ShaderResource.h  StaticMeshResource.cpp  StaticMeshResource.h  TextureResource.cpp  TextureResource.h
src/SceneLoader/: BaseConfiguration.cpp  BaseConfiguration.h  ModelBuildConfiguration.h  ProbeBuildConfiguration.h  SceneLoader.cpp  SceneLoader.h
src/WireframeRenderer/: GridPlane.cpp  GridPlane.h  LineMesh.cpp  WIreframeRenderer.cpp  WireFrame.cpp  WireFrame.h  WireframeRenderer.h
src_old/: Include.h
src_old/Components/: ModelComponent.h  RenderableComponent.h  Scene.h
src_old/Helper/: GLDebugMessageCallback.h  Log.h  QuadTree.cpp  QuadTreeOccupancy.cpp  ShaderSourceLoader.h
src_old/WireframeRenderer/: GridPlane.cpp  GridPlane.h  LineMesh.h
(+563 files in other folders)
